@@ -1,6 +1,7 @@
 libmpdclient 2.15 (not yet released)
 * support MPD protocol 0.21
   - search: support search expressions
+  - search: descending sort
   - song: audio format
 * fix `-Wrestrict` compiler warning
 
